refactor and delete unnecessary files

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,5 @@ OLLAMA_MODEL=qwen2.5:3b-instruct
 # AIMINDS_EMBEDDING_MODEL=all-MiniLM-L6-v2
 # AIMINDS_EMBEDDING_DIMENSION=384
 
-# --- OpenRouter (optional fallback, not needed for hackathon) ---
-# OPENROUTER_API_KEY=sk-or-v1-...
-# OPENROUTER_MODEL=qwen/qwen-2.5-7b-instruct:free
+# --- File Watcher (auto-ingestion) ---
+# AIMINDS_WATCH_DIR=./inbox
