docs: align Synapsis architecture with Phi-4 and observability

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# MemoryGraph — Python Dependencies
+# Synapsis — Python Dependencies
 # Pin versions after initial install: pip freeze > requirements.lock
 
 # === Core Framework ===
