feat: dual-lane runtime integration, incident pipeline, and strict live frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,12 @@ SYNAPSIS_OLLAMA_BASE_URL=http://127.0.0.1:11434
 SYNAPSIS_OLLAMA_MODEL_T1=phi4-mini
 SYNAPSIS_OLLAMA_MODEL_T2=qwen2.5:3b
 SYNAPSIS_OLLAMA_MODEL_T3=qwen2.5:0.5b
+SYNAPSIS_OLLAMA_MODEL_GPU=phi4-mini
+SYNAPSIS_OLLAMA_MODEL_CPU=qwen2.5:0.5b
 SYNAPSIS_OLLAMA_TIMEOUT=120
+SYNAPSIS_RUNTIME_FAIL_FAST=true
+SYNAPSIS_ALLOW_MODEL_FALLBACK=false
+SYNAPSIS_INCIDENT_RETENTION_LIMIT=500
 
 # Qdrant
 SYNAPSIS_QDRANT_HOST=127.0.0.1
