--- a/frontend/synapsis/package.json
+++ b/frontend/synapsis/package.json
@@ -12,7 +12,8 @@
     "test:watch": "vitest",
     "test:contract": "vitest run tests/contract",
     "test:integration": "vitest run tests/integration",
-    "test:e2e": "echo \"No Playwright suite configured yet\"",
+    "test:a11y": "vitest run tests/a11y",
+    "test:e2e": "playwright test",
     "gates": "node scripts/run-gates.mjs"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -45,12 +47,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axe-core": "^4.11.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "happy-dom": "^20.6.1",
     "jsdom": "^27.0.1",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "vitest-axe": "^0.1.0"
   }
 }
