--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.7.0"
+    "react-force-graph-3d": "^1.29.1",
+    "recharts": "^3.7.0",
+    "three": "^0.182.0",
+    "three-spritetext": "^1.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
